RESOLVED FIXED115200
[Mac] in-band cues sometimes have incorrect duration
https://bugs.webkit.org/show_bug.cgi?id=115200
Summary [Mac] in-band cues sometimes have incorrect duration
Eric Carlson
Reported 2013-04-25 13:03:45 PDT
In-band cues delivered during seeking should be displayed but discarded as soon as the next cue is delivered, because not all cues in a track are delivered during a seek.
Attachments
Proposed patch (11.64 KB, patch)
2013-04-25 13:14 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2013-04-25 13:14:53 PDT
Created attachment 199743 [details] Proposed patch
WebKit Commit Bot
Comment 2 2013-04-26 08:16:54 PDT
Comment on attachment 199743 [details] Proposed patch Clearing flags on attachment: 199743 Committed r149187: <http://trac.webkit.org/changeset/149187>
WebKit Commit Bot
Comment 3 2013-04-26 08:16:56 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.